if(OPEN3D_USE_INSTALLED_LIBRARY)
    # Build only Python bindings and optional ML ops against find_package(Open3D).
    # Skip in-tree core, tools, apps, and tests (already in the devel package).
    if(BUILD_TENSORFLOW_OPS OR BUILD_PYTORCH_OPS)
        add_subdirectory(open3d/ml)
    endif()
    if(BUILD_PYTHON_MODULE)
        add_subdirectory(pybind)
    endif()
else()
    add_subdirectory(open3d)
    add_subdirectory(tools)
    add_subdirectory(apps)
    if(BUILD_UNIT_TESTS)
        add_subdirectory(tests)
    endif()
    if(BUILD_BENCHMARKS)
        add_subdirectory(benchmarks)
    endif()
    if(BUILD_PYTHON_MODULE)
        add_subdirectory(pybind)
    endif()
endif()
