function(open3d_show_and_abort_on_warning trgt)
    if(MSVC)
        # target_compile_options(${trgt} PRIVATE /W4 /WX)
        target_compile_options(${trgt} PRIVATE /W3)
    else()
        # target_compile_options(${trgt} PRIVATE -Wall -Wextra -Werror)
        target_compile_options(${trgt} PRIVATE -Wall -Werror)
    endif()
endfunction()

add_subdirectory(Open3D)
add_subdirectory(Tools)
add_subdirectory(Apps)
if (BUILD_UNIT_TESTS)
    add_subdirectory(UnitTest)
endif()
if (BUILD_BENCHMARKS)
    add_subdirectory(Benchmark)
endif()
if (BUILD_PYTHON_MODULE)
    add_subdirectory(pybind)
endif()
if (BUILD_TENSORFLOW_OPS AND WIN32)
    message( FATAL_ERROR "Building Tensorflow ops on Windows is currently not supported." )
    # see https://github.com/tensorflow/custom-op/issues/24
endif()
if (BUILD_TENSORFLOW_OPS)
    add_subdirectory(TensorflowOps)
endif()
