function(open3d_show_and_abort_on_warning trgt)
    if(MSVC)
        # target_compile_options(${trgt} PRIVATE /W4 /WX)
        target_compile_options(${trgt} PRIVATE /W3)
    else()
        # target_compile_options(${trgt} PRIVATE -Wall -Wextra -Werror)
        target_compile_options(${trgt} PRIVATE -Wall -Werror)
    endif()
endfunction()

add_subdirectory(Open3D)
add_subdirectory(Tools)
add_subdirectory(Apps)
if (BUILD_UNIT_TESTS)
    add_subdirectory(UnitTest)
endif()
if (BUILD_BENCHMARKS)
    add_subdirectory(Benchmark)
endif()
if (BUILD_PYTHON_MODULE)
    add_subdirectory(pybind)
endif()
